完成了部分学生签到的逻辑，以及架构，和学生提交信息的逻辑

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,5 +34,6 @@
     <string name="position_cant_empty">职位不能为空</string>
     <string name="mail_cant_empty">邮箱不能为空</string>
     <string name="phone_cant_empty">手机号不能为空</string>
+    <string name="submit_info_succeed">提交信息成功</string>
 
 </resources>
