--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,8 @@
     <string name="check_sign_result">检查签到结果</string>
     <string name="add_course">添加课程</string>
     <string name="select_class">选择班级</string>
+    <string name="uploading_portrait">正在上传头像</string>
+    <string name="absence">缺勤</string>
+    <string name="sick_leave">病假</string>
+    <string name="sign_info_count">签到信息汇总</string>
 </resources>
