--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,5 +67,10 @@
     <string name="must_choose_class">必须选择班级</string>
     <string name="setting">设置</string>
     <string name="course_cant_empty">课程不能为空</string>
+    <string name="class_didnt_exist">班级不存在是否添加</string>
+    <string name="add_class">添加班级</string>
+    <string name="course_add_success">课程添加成功</string>
+    <string name="check_course_sing_info">签到详情</string>
+    <string name="check_sign_detail_info">查看签到详情</string>
 
 </resources>
