--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,7 +61,7 @@
     <string name="upload_success">上传成功</string>
     <string name="sure_password">确认密码</string>
     <string name="input_password_again">请再次输入密码</string>
-    <string name="input_password">输入密码</string>
+
     <string name="student_info">学生信息</string>
     <string name="edit_student_info">编辑学生信息</string>
     <string name="must_choose_class">必须选择班级</string>
@@ -72,5 +72,11 @@
     <string name="course_add_success">课程添加成功</string>
     <string name="check_course_sing_info">签到详情</string>
     <string name="check_sign_detail_info">查看签到详情</string>
-
+    <string name="forget_password">忘记密码</string>
+    <string name="input_phone">输入手机号</string>
+    <string name="input_password">输入密码</string>
+    <string name="student_login">学生登录</string>
+    <string name="teacher_login">老师登录</string>
+    <string name="input_mail">输入邮箱</string>
+    <string name="input_name">输入姓名</string>
 </resources>
