--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,4 +80,15 @@
     <string name="input_mail">输入邮箱</string>
     <string name="input_name">输入姓名</string>
     <string name="course_detail_info">课程信息</string>
+    <string name="change_student_sign_state">修改学生签到状态</string>
+    <string name="sure">确认</string>
+    <string name="cancel">取消</string>
+    <string name="change_password">修改密码</string>
+    <string name="about">关于</string>
+    <string name="feedback">意见反馈</string>
+    <string name="log_out">退出登录</string>
+    <string name="check_person_info">查看个人信息</string>
+    <string name="share_app">分享应用</string>
+    <string name="check_version">检查版本</string>
+    <string name="unbind_device">解绑设备</string>
 </resources>
